--- a/{{cookiecutter.app_name}}/Dockerfile
+++ b/{{cookiecutter.app_name}}/Dockerfile
@@ -1,40 +1,48 @@
-# Build Stage
-FROM {{cookiecutter.docker_build_image}}:{{cookiecutter.docker_build_image_version}} AS build-stage
+# Start from the latest golang base image
+FROM {{cookiecutter.docker_build_image}}:{{cookiecutter.docker_build_image_version}} AS builder
 
 LABEL app="build-{{cookiecutter.app_name}}"
-LABEL REPO="https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.app_name}}"
 
-ENV PROJPATH=/go/src/github.com/{{cookiecutter.github_username}}/{{cookiecutter.app_name}}
+# Add Maintainer Info
+LABEL maintainer="{{cookiecutter.full_name}} <{{cookiecutter.email_address}}>"
 
-# Because of https://github.com/docker/docker/issues/14914
-ENV PATH=$PATH:$GOROOT/bin:$GOPATH/bin
+# Copy the source from the current directory to the Working Directory inside the container
+COPY . .
 
-ADD . /go/src/github.com/{{cookiecutter.github_username}}/{{cookiecutter.app_name}}
-WORKDIR /go/src/github.com/{{cookiecutter.github_username}}/{{cookiecutter.app_name}}
+#RUN rm -rf third_party  README.MD scripts
 
-RUN make build-alpine
+RUN go mod tidy
+
+# Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
+RUN go mod download
+
+# Create appuser.
+RUN echo "nobody:x:65534:65534:Nobody:/:" > /etc_passwd
+
+# Build the Go app
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -ldflags="-w -s" -o main ./main.go
+
+### Certs
+FROM {{cookiecutter.docker_certs_image}} as certs
+RUN apk --update add ca-certificates
 
 # Final Stage
 FROM {{cookiecutter.docker_image}}
 
 ARG GIT_COMMIT
 ARG VERSION
-LABEL REPO="https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.app_name}}"
 LABEL GIT_COMMIT=$GIT_COMMIT
 LABEL VERSION=$VERSION
 
-# Because of https://github.com/docker/docker/issues/14914
-ENV PATH=$PATH:/opt/{{cookiecutter.app_name}}/bin
+WORKDIR /root/
 
-WORKDIR /opt/{{cookiecutter.app_name}}/bin
+COPY --from=builder /etc_passwd /etc/passwd
+COPY --from=certs /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
+# Copy the Pre-built binary file from the previous stage
+COPY --from=builder /app/main /
 
-COPY --from=build-stage /go/src/github.com/{{cookiecutter.github_username}}/{{cookiecutter.app_name}}/bin/{{cookiecutter.app_name}} /opt/{{cookiecutter.app_name}}/bin/
-RUN chmod +x /opt/{{cookiecutter.app_name}}/bin/{{cookiecutter.app_name}}
+# Use an unprivileged user.
+USER nobody
 
-# Create appuser
-RUN adduser -D -g '' {{cookiecutter.app_name}}
-USER {{cookiecutter.app_name}}
-
-ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-
-CMD ["/opt/{{cookiecutter.app_name}}/bin/{{cookiecutter.app_name}}"]
+# Command to run the executable
+ENTRYPOINT [ "/main"]
